--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "be",
   "version": "1.0.0",
   "description": "REST API with NODE, TYPESCRIPT, EXPRESS, POSTGRES (TYPEORM)",
-  "main": "app.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc",
-    "dev": "ts-node-dev --respawn --transpileOnly ./app/app.ts",
-    "prod": "tsc && node ./build/app.js"
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "prod": "node .",
+    "dev": "ts-node-dev --respawn --transpileOnly ./src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -21,10 +23,13 @@
   },
   "homepage": "https://github.com/kegriz/BE#readme",
   "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/node": "^13.13.5",
-    "express": "^4.17.1",
     "ts-node-dev": "^1.0.0-pre.44",
+    "tslint": "^6.1.2",
     "typescript": "^3.8.3"
   }
 }
