--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prestart": "npm run build",
     "prod": "node .",
     "dev": "ts-node-dev --respawn --transpileOnly ./src/index.ts",
+    "start": "npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
