--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "description": "REST API with NODE, TYPESCRIPT, EXPRESS, POSTGRES (TYPEORM)",
   "main": "dist/index.js",
+  "compilerOptions" : {
+  },
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
     "prestart": "npm run build",
     "prod": "node .",
-    "dev": "ts-node-dev --respawn --transpileOnly ./src/index.ts",
-    "start": "npm run dev",
+    "start": "ts-node src/config/server.ts",
+    "dev": "nodemon -x ts-node src/config/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,12 +26,13 @@
   },
   "homepage": "https://github.com/kegriz/BE#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.4",
+    "ts-node": "^8.10.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/node": "^13.13.5",
-    "ts-node-dev": "^1.0.0-pre.44",
     "tslint": "^6.1.2",
     "typescript": "^3.8.3"
   }
