--- a/package.json
+++ b/package.json
@@ -3,15 +3,11 @@
   "version": "1.0.0",
   "description": "REST API with NODE, TYPESCRIPT, EXPRESS, POSTGRES (TYPEORM)",
   "main": "dist/index.js",
-  "compilerOptions" : {
-  },
+  "compilerOptions": {},
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
-    "build": "tsc",
-    "prestart": "npm run build",
-    "prod": "node .",
     "start": "ts-node src/config/server.ts",
     "dev": "nodemon -x ts-node src/config/server.ts",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,9 +24,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
-    "ts-node": "^8.10.1"
-  },
-  "devDependencies": {
+    "ts-node": "^8.10.1",
     "@types/express": "^4.17.6",
     "@types/node": "^13.13.5",
     "tslint": "^6.1.2",
