--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "ts-node src/config/server.ts",
     "dev": "nodemon -x ts-node src/config/server.ts",
     "build": "tsc",
+    "lint": "eslint . --ext .ts",
+    "lint-and-fix": "eslint . --ext .ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,12 +24,19 @@
   },
   "homepage": "https://github.com/kegriz/BE#readme",
   "dependencies": {
+    "@types/express": "^4.17.6",
+    "@types/node": "^13.13.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.1",
-    "@types/express": "^4.17.6",
-    "@types/node": "^13.13.5",
-    "tslint": "^6.1.2",
     "typescript": "^3.8.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "prettier": "^2.0.5"
   }
 }
